--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.0",
+    "connected-react-router": "^6.8.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.1"
   },
   "scripts": {
