--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-redux": "^7.1.3",
     "react-refresh": "^0.8.3",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
